@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
+  <file source-language="en" target-language="de" datatype="plaintext" original="file.ext">
+    <body>
+      <trans-unit id="7f118f11a96ed11aa0b91cbc414aff9e" resname="security.login.remember_me">
+        <source>security.login.remember_me</source>
+        <target>Angemeldet bleiben</target>
+      </trans-unit>
+    </body>
+  </file>
+</xliff>
