@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-  Homepage.
+  {{ 'app.homepage'|trans }}
 {% endblock %}
