@@ -15,14 +15,13 @@ use FOS\UserBundle\Event\FilterUserResponseEvent;
  * Common use cases for this are:
  *
  *   * triggering special handling when a user changes his password, and you require
- *     access to the plaintext password.
+ *     access to the plain text password.
  *   * triggering a reaction when a user confirms his account, e.g. by sending a
  *     welcome message, or assigning a user to a default group with standard roles
  *     on completing the registration.
  *
- * See https://github.com/FriendsOfSymfony/FOSUserBundle/blob/master/Resources/doc/controller_events.md
- *
  * @author Daniel S. Reichenbach <daniel@kogitoapp.com>
+ * @see https://github.com/FriendsOfSymfony/FOSUserBundle/blob/master/Resources/doc/controller_events.md
  */
 class UserEventListener implements EventSubscriberInterface
 {
